# treesitter-chunker

./: .buildinfo  .coverage.TorrenceBioAI1.1771943.XnRZjYYx  .coverage.TorrenceBioAI1.1771943.XnmwLjOx  .coverage.TorrenceBioAI1.1772078.XIAzDjRx  .coverage.TorrenceBioAI1.1772130.XCltdXOx  .coverage.TorrenceBioAI1.2578420.XjTGUISx  .coverage.TorrenceBioAI1.2578604.XHNrNWXx  .coverage.TorrenceBioAI1.2578604.XIzMNbsx  .coverage.TorrenceBioAI1.2578917.XknRfWQx  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW_REPORT.md  COMMIT_EVERYTHING_NOW.sh  DEV_TEAM_ANSWERS.md  Dockerfile  FIX_WORKTREE_FILES.md  IMPLEMENTATION_SUMMARY.md  PARALLEL_DEVELOPMENT_COMMANDS.md  README.md  RESET_ALL_WORKTREES.sh  SECURITY.md  SPEC_CALL_SPANS_IMPLEMENTATION.md  SUPPORT.md  TEST_COVERAGE_SUMMARY.md  TEST_FIXES_NEEDED.md  TEST_IMPLEMENTATION_PLAN.md  TEST_IMPLEMENTATION_PROGRESS.md  compatibility.db  configuration.md  demo_postgres_export.py  example_parquet_usage.py  example_repo_usage.py  example_sliding_window_integration.py  export-formats.md  fix_language_conflicts.py  fix_plugins.py  genindex.html  (+25 more)
.ai-dev-kit/: manifest.json
.ai-dev-kit/commands/: list-skills.md  list-tools.md  prime.md
.ai-dev-kit/config/: planning-models.json
.ai-dev-kit/dev-tools/: README.md
.ai-dev-kit/output-styles/: README.md
.ai-dev-kit/protocols/: docs-management.md  lane-result-manifest.md  recovery.md
.ai-dev-kit/scripts/: github_helper.py  log_event.sh  trace_init.py
.ai-dev-kit/templates/: AGENTS.md.template
.claude/: settings.json
.claude/commands/: phase-breakdown.md
.claude/hooks/: elevenlabs_tts.py  notification.py  openai_tts.py  pyttsx3_tts.py  (+5 more)
_modules/: index.html
_sources/: index.rst.txt
api/: __init__.py  chunker.html  server.py
archive/: README.md
benchmarks/: __init__.py  benchmark.py  benchmark_strategies.py  comprehensive_suite.py  example_benchmark.py  regression_tracker.py  run_benchmarks.py
chunker/: __init__.py  auto.py  cache.py  chunker.py  chunker_config.py  core.py  exceptions.py  factory.py  gc_tuning.py  grammar_manager.py  incremental.py  multi_language.py  optimization.py  parallel.py  parser.py  plugin_manager.py  query_advanced.py  registry.py  smart_context.py  streaming.py  template_generator.py  types.py  vfs.py  vfs_chunker.py
cli/: main.py  repo_command.py  setup_command.py
docs/: AST_VIEWER_ARCHITECTURE_GUIDE.md  LESSONS_LEARNED.md  api-reference.md  architecture.md  cli-reference.md  cookbook.md  distribution_component.md  export-formats.md  final-integration-testing.md  getting-started.md  grammar_discovery.md  grammar_management.md  index.md  internal-api.md  migration-guide-2.0.1.md  troubleshooting.md  user-guide.md
examples/: core_integration_demo.py  custom_plugin_example.py  custom_rules_demo.py  demo_log_processor.py  demo_postgres_export.py  dependency_visualization.py  devenv_demo.py  enhanced_chunking_demo.py  example.py  example_repo_usage.py  example_sliding_window_integration.py  fallback_demo.py  final_integration_testing_demo.py  gc_tuning_example.py  hierarchy_demo.py  incremental_demo.py  incremental_processing.py  manage_grammars.py  metadata_extraction_demo.py  monitoring_demo.py  multi_language_demo.py  neo4j_export_example.py  optimize_chunks.py  overlapping_demo.py  overlapping_demo_standalone.py  overlapping_fallback_demo.py  performance_demo.py  performance_framework_demo.py  plugin_demo.py  query_advanced_demo.py  repo_processing_example.py  semantic_merging_demo.py  semantic_merging_improved_demo.py  smart_context_demo.py  test_config_processor_demo.py  test_integration_with_main_chunker.py  test_overlapping_direct.py  test_postgres_advanced.py  test_token_integration_demo.py  token_example.py  (+2 more)
grammars/: grammars.json
plans/: P20-pypi-install.md
profiling/: profile_chunker.py
scripts/: build_all_grammars.py  build_all_remaining_grammars.py  build_final_5_grammars.py  build_grammars.py  build_grammars_simple.py  build_lib.py  build_wasm_grammar.py  build_wheels.py  direct_build_missing_grammars.py  fetch_grammars.py  fix_all_f821_errors.py  fix_ambiguous_vars.py  fix_and_build_failed_grammars.py  fix_b904_errors.py  fix_bare_except.py  fix_ble001_properly.py  fix_blind_except.py  fix_builtin_shadowing.py  fix_circular_imports.py  fix_empty_blocks.py  fix_exception_handling.py  fix_f821_undefined_names.py  fix_g002_logging.py  fix_g004.py  fix_g004_logging.py  fix_import_organization.py  fix_import_placement.py  fix_imports_v2.py  fix_language_conflicts.py  fix_logging_fstrings.py  fix_method_decorators.py  fix_mktemp_usage.py  fix_nested_self_refs.py  fix_other_path_operations.py  fix_path_operations.py  fix_perf401.py  fix_perf401_batch.py  fix_perf401_improved.py  fix_perf401_remaining.py  fix_plc1901_empty_string.py  (+22 more)
site/: objects.inv
spec_tests/: test_codechunk_ids_backcompat.py
specs/: ROADMAP.md  code-review-fixes-spec.md  v3-consistency-completion-spec.md  v4-preprod-finalization-spec.md
tests/: conftest.py  phase13_debug_tools_integration.py  test_adaptive_chunker.py  test_auto.py  test_build_implementation.py  test_build_real_compilation.py  test_build_system_integration.py  test_build_system_unit.py  test_c_language.py  test_cache.py  test_cache_file_monitoring.py  test_chunking.py  test_cicd_pipeline.py  test_cli.py  test_cli_integration_advanced.py  test_clojure_language.py  test_composite_chunker.py  test_composite_config_advanced.py  test_config.py  test_config_advanced_scenarios.py  test_config_processor.py  test_config_runtime_changes.py  test_cpp_language.py  test_cross_module_errors.py  test_csharp_language.py  test_custom_rules.py  test_dart_language.py  test_debug_contract_impl.py  test_debug_tools.py  test_debug_tools_integration.py  test_definition_id.py  test_dependencies.py  test_developer_tooling.py  test_devenv_integration.py  test_distribution_adapter.py  test_distribution_impl.py  test_dockerfile_language.py  test_edge_cases.py  test_elixir_language.py  test_end_to_end.py  (+110 more)
treesitter_chunker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+611 files in other folders)
