[project]
name            = "treesitter_chunker"
version         = "0.1.0"
description     = "Semantic code chunker using Tree-sitter"
readme          = "README.md"
requires-python = ">=3.10"
authors         = [{ name = "Consiliency", email = "dev@consiliency.com" }]

dependencies = [
    "tree_sitter",
    "rich",
    "typer",
    "pyarrow>=11.0.0",
    "toml",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where   = ["."]
include = ["chunker", "chunker.*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--ignore=grammars/"
